--- a/Parcial_Alvarado_Samuel/app/src/main/AndroidManifest.xml
+++ b/Parcial_Alvarado_Samuel/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".VerListado"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
